// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup The default state of the component with minimal required items passed in should render correctly 1`] = `
<RadioGroup
  checked={[MockFunction]}
  checkedChoice={null}
  choices={Array []}
  onChange={[MockFunction]}
  row={false}
>
  <ul
    className="radio-group"
  />
</RadioGroup>
`;

exports[`RadioGroup The radio buttons should render with passed in props and a direction set to anything other than "column" Should render correctly 1`] = `
<RadioGroup
  checked={[MockFunction]}
  checkedChoice={null}
  choices={
    Array [
      Object {
        "label": "Filter 1",
        "value": "FILTER1",
      },
      Object {
        "label": "Filter 2",
        "value": "FILTER2",
      },
      Object {
        "label": "Filter 3",
        "value": "FILTER 3",
      },
    ]
  }
  direction=""
  onChange={[MockFunction]}
  row={false}
>
  <ul
    className="radio-group"
  >
    <li
      className="radio-group__li"
      key="FILTER1"
    >
      <label>
        <Radio
          checked={false}
          onChange={[MockFunction]}
          onClick={[MockFunction]}
          value="FILTER1"
        >
          <div
            aria-checked={false}
            className="radio"
            role="radio"
            tabIndex={0}
          >
            <input
              checked={false}
              className="radio__input"
              key="FILTER1"
              onClick={[MockFunction]}
              onKeyPress={[MockFunction]}
              readOnly={true}
              type="radio"
              value="FILTER1"
            />
          </div>
        </Radio>
        <span
          className="radio-group__label"
        >
          Filter 1
        </span>
      </label>
    </li>
    <li
      className="radio-group__li"
      key="FILTER2"
    >
      <label>
        <Radio
          checked={false}
          onChange={[MockFunction]}
          onClick={[MockFunction]}
          value="FILTER2"
        >
          <div
            aria-checked={false}
            className="radio"
            role="radio"
            tabIndex={0}
          >
            <input
              checked={false}
              className="radio__input"
              key="FILTER2"
              onClick={[MockFunction]}
              onKeyPress={[MockFunction]}
              readOnly={true}
              type="radio"
              value="FILTER2"
            />
          </div>
        </Radio>
        <span
          className="radio-group__label"
        >
          Filter 2
        </span>
      </label>
    </li>
    <li
      className="radio-group__li"
      key="FILTER 3"
    >
      <label>
        <Radio
          checked={false}
          onChange={[MockFunction]}
          onClick={[MockFunction]}
          value="FILTER 3"
        >
          <div
            aria-checked={false}
            className="radio"
            role="radio"
            tabIndex={0}
          >
            <input
              checked={false}
              className="radio__input"
              key="FILTER 3"
              onClick={[MockFunction]}
              onKeyPress={[MockFunction]}
              readOnly={true}
              type="radio"
              value="FILTER 3"
            />
          </div>
        </Radio>
        <span
          className="radio-group__label"
        >
          Filter 3
        </span>
      </label>
    </li>
  </ul>
</RadioGroup>
`;

exports[`RadioGroup The radio buttons should render with passed in props and using the default direction should render correctly 1`] = `
<RadioGroup
  checked={[MockFunction]}
  checkedChoice={null}
  choices={
    Array [
      Object {
        "label": "Filter 1",
        "value": "FILTER1",
      },
      Object {
        "label": "Filter 2",
        "value": "FILTER2",
      },
    ]
  }
  onChange={[MockFunction]}
  row={false}
>
  <ul
    className="radio-group"
  >
    <li
      className="radio-group__li"
      key="FILTER1"
    >
      <label>
        <Radio
          checked={false}
          onChange={[MockFunction]}
          onClick={[MockFunction]}
          value="FILTER1"
        >
          <div
            aria-checked={false}
            className="radio"
            role="radio"
            tabIndex={0}
          >
            <input
              checked={false}
              className="radio__input"
              key="FILTER1"
              onClick={[MockFunction]}
              onKeyPress={[MockFunction]}
              readOnly={true}
              type="radio"
              value="FILTER1"
            />
          </div>
        </Radio>
        <span
          className="radio-group__label"
        >
          Filter 1
        </span>
      </label>
    </li>
    <li
      className="radio-group__li"
      key="FILTER2"
    >
      <label>
        <Radio
          checked={false}
          onChange={[MockFunction]}
          onClick={[MockFunction]}
          value="FILTER2"
        >
          <div
            aria-checked={false}
            className="radio"
            role="radio"
            tabIndex={0}
          >
            <input
              checked={false}
              className="radio__input"
              key="FILTER2"
              onClick={[MockFunction]}
              onKeyPress={[MockFunction]}
              readOnly={true}
              type="radio"
              value="FILTER2"
            />
          </div>
        </Radio>
        <span
          className="radio-group__label"
        >
          Filter 2
        </span>
      </label>
    </li>
  </ul>
</RadioGroup>
`;
